--- a/style.css
+++ b/style.css
@@ -613,3 +613,306 @@
     font-family: Arial, 'Source Sans Pro';
     flex-shrink: 0;
 }
+.testimonial-1{
+    width: 192.1rem;
+    height: 43.8rem;
+    position: absolute;
+    left: 0;
+    top: 154rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.auto-testi{
+    box-sizing: border-box;
+    padding: 0rem 82.9rem 4rem 79rem;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+}
+.testimonial-1-1{
+    margin-bottom: 1.6rem;
+    text-align: center;
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.berbagai-review{
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.list-testi{
+    margin-bottom: 2.4rem;
+    width: 100%;
+    height: 27rem;
+    display: flex;
+    column-gap: 3.2rem;
+    align-items: center;
+    flex-shrink: 0;
+}
+.list-testi-1{
+    box-sizing: border-box;
+    padding: 6.9rem 3.3rem 6.9rem 3.2rem;
+    width: 61.9rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.150000006);
+    background-color: #f1f3ff;
+    border-radius: 0.8rem;
+    flex-shrink: 0;
+}
+.list-testi-text{
+    height: 100%;
+    row-gap: 0.8rem;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+}
+.list-testi-text img{
+    width: 8rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.lorem{
+    max-width: 41.4rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    flex-shrink: 0;
+}
+.john{
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.list-img{
+    margin-right: 12.9rem;
+    width: 8rem;
+    height: 8rem;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url(asset/imgphoto-bg-Kg5.png);
+    border-radius: 4rem;
+    flex-shrink: 0;
+}
+.list-testi-2{
+    box-sizing: border-box;
+    padding: 6.9rem 3.3rem 6.9rem 4.6rem;
+    width: 61.9rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.150000006);
+    background-color: #f1f3ff;
+    border-radius: 0.8rem;
+    flex-shrink: 0;
+}
+.img-list-testi-2{
+        margin-right: 4.6rem;
+    width: 8rem;
+    height: 8rem;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url(asset/imgphoto-bg-K9s.png);
+    border-radius: 4rem;
+    flex-shrink: 0;
+}
+.list-img-2{
+    height: 100%;
+    row-gap: 0.8rem;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+}
+.rate{
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
+}
+.star-1{
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.star-2{
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.star-3{
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.star-4{
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+
+}
+.star-5{
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.lorem-2{
+    max-width: 41.4rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    flex-shrink: 0;
+}
+.john-2{
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.list-testi-3{
+    box-sizing: border-box;
+    padding: 6.9rem 3.3rem 6.9rem 4.6rem;
+    width: 61.9rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    box-shadow: 0 0 0.4rem rgba(0, 0, 0, 0.150000006);
+    background-color: #f1f3ff;
+    border-radius: 0.8rem;
+    flex-shrink: 0;
+}
+.img-list-testi{
+    margin-right: 4.6rem;
+    width: 8rem;
+    height: 8rem;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: url(asset/imgphoto-bg.png);
+    border-radius: 4rem;
+    flex-shrink: 0; 
+}
+list-testi-text2{
+    height: 100%;
+    row-gap: 0.8rem;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+}
+.rate-2{
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
+}
+.star-1-1{
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.star-1-2{
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.star-1-3{
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.star-1-4{
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.star-1-5{
+    width: 1.6rem;
+    height: 1.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.lorem-3{
+    max-width: 41.4rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    flex-shrink: 0;
+}
+.john-3{
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.button-carousel{
+        margin: 0rem 91.6rem 0rem 91.7rem;
+    width: calc(100% - 183.3rem);
+    display: flex;
+    align-items: center;
+    flex-shrink: 0;
+}
+.left-button{
+    margin-right: 2.4rem;
+    width: 3.2rem;
+    height: 3.2rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.right-button{
+    width: 3.2rem;
+    height: 3.2rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
