--- a/style.css
+++ b/style.css
@@ -916,3 +916,247 @@ list-testi-text2{
     vertical-align: top;
     flex-shrink: 0;
 }
+.auto-group-2{
+    box-sizing: border-box;
+    padding: 10rem 13.6rem 12.6rem 13.6rem;
+    width: 144rem;
+    height: 99.6rem;
+    position: absolute;
+    left: 0;
+    top: 197.8rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.banner{
+    margin-bottom: 10rem;
+    box-sizing: border-box;
+    padding: 6.4rem 31.1rem 6.4rem 29.6rem;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    background-color: #0d28a6;
+    border-radius: 1.3rem;
+    flex-shrink: 0;
+}
+.sewa-mobil-lokasimu{
+        margin-bottom: 1.6rem;
+    text-align: center;
+    font-size: 3.6rem;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #ffffff;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.lorem-4{
+    margin: 0rem 0.1rem 5.2rem 0rem;
+    max-width: 44.1rem;
+    text-align: center;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #ffffff;
+    font-family: Arial, 'Source Sans Pro';
+    flex-shrink: 0;
+}
+.button-mulai-sewa-mobil{
+    margin: 0rem 20.3rem 0rem 21.8rem;
+    width: calc(100% - 42.1rem);
+    height: 3.6rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #ffffff;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #5cb85f;
+    border-radius: 0.2rem;
+    flex-shrink: 0;
+}
+.faq-1{
+        width: 100%;
+    height: 34.4rem;
+    display: flex;
+    align-items: flex-start;
+    flex-shrink: 0;
+}
+.text-faq{
+        margin: 0.4rem 16.1rem 0rem 0rem;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+}
+.frequently{
+    margin-bottom: 1.6rem;
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 1.5;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.lorem-faq{
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.list-faq{
+    width: 66.8rem;
+    height: 100%;
+    row-gap: 1.6rem;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
+}
+.list-faq-1{
+    box-sizing: border-box;
+    padding: 1.8rem 3rem 1.8rem 2.4rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border: solid 0.1rem #d4d4d4;
+    background-color: #ffffff;
+    border-radius: 0.4rem;
+    flex-shrink: 0;
+}
+.list-faq-1 p{
+    margin-right: 39.6rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.list-faq-1 img{
+    width: 1.2rem;
+    height: 0.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.list-faq-2{
+    box-sizing: border-box;
+    padding: 1.8rem 3rem 1.8rem 2.4rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border: solid 0.1rem #d4d4d4;
+    background-color: #ffffff;
+    border-radius: 0.4rem;
+    flex-shrink: 0;
+}
+.list-faq-2 p{
+    margin-right: 32.5rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.list-faq-2 img{
+    width: 1.2rem;
+    height: 0.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.list-faq-3{
+    box-sizing: border-box;
+    padding: 1.8rem 3rem 1.8rem 2.4rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border: solid 0.1rem #d4d4d4;
+    background-color: #ffffff;
+    border-radius: 0.4rem;
+    flex-shrink: 0;
+}
+.list-faq-3 p{
+    margin-right: 25.4rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.list-faq-3 img{
+    width: 1.2rem;
+    height: 0.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0; 
+}
+.list-faq-4{
+    box-sizing: border-box;
+    padding: 1.8rem 3rem 1.8rem 2.4rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border: solid 0.1rem #d4d4d4;
+    background-color: #ffffff;
+    border-radius: 0.4rem;
+    flex-shrink: 0;
+}
+.list-faq-4 p{
+    margin-right: 40.2rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.list-faq-4 img{
+    width: 1.2rem;
+    height: 0.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
+.list-faq-5{
+    box-sizing: border-box;
+    padding: 1.8rem 3rem 1.8rem 2.4rem;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border: solid 0.1rem #d4d4d4;
+    background-color: #ffffff;
+    border-radius: 0.4rem;
+    flex-shrink: 0;
+}
+.list-faq-5 p{
+    margin-right: 39.1rem;
+    font-size: 1.4rem;
+    font-weight: 700;
+    line-height: 1.4285714286;
+    color: #000000;
+    font-family: Arial, 'Source Sans Pro';
+    white-space: nowrap;
+    flex-shrink: 0;
+}
+.list-faq-5 img{
+    width: 1.2rem;
+    height: 0.6rem;
+    object-fit: contain;
+    vertical-align: top;
+    flex-shrink: 0;
+}
